[project]
name = "litestar-events"
version = "0.1.0"
description = "Event Emitter Backends for Litestar."
readme = "README.md"
authors = [{ name = "hasansezertasan", email = "hasansezertasan@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["litestar"]

[project.optional-dependencies]
confluent = [
    "confluent-kafka>=2,!=2.8.1,<3; python_version < '3.13'",
    "confluent-kafka>=2.6,!=2.8.1,<3; python_version >= '3.13'",
]
kafka = ["aiokafka>=0.9,<0.15"]
mqtt = ["aiomqtt>=2"]
nats = ["nats-py>=2.12.0,<=3.0.0"]
postgres = ["psycopg[pool]>=3.2.0"]
rabbit = ["aio-pika>=9,<10"]
redis = ["redis>=8.0.0,<8.1.0"]

[dependency-groups]
optionals = ["litestar-events[confluent,kafka,mqtt,nats,postgres,rabbit,redis]"]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "testcontainers[kafka,nats,postgres,rabbitmq,redis]>=4",
]
dev = [
    { include-group = "optionals" },
    { include-group = "test" },
    "prek==0.4.5",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a running broker (see tests/integration/conftest.py)",
    "smoke: cross-cutting checks (imports, packaging)",
]
